[gd_scene load_steps=7 format=3 uid="uid://byxsfe8kq08hl"]

[ext_resource type="Script" path="res://scenes/EndlessMode/EndlessMode.gd" id="1_hvy67"]
[ext_resource type="Texture2D" uid="uid://bk3bd7jefy1ic" path="res://scenes/EndlessMode/BackgroundLayer1.svg" id="2_8iw2e"]
[ext_resource type="Script" path="res://scenes/EndlessMode/Background.gd" id="3_3vcui"]
[ext_resource type="Texture2D" uid="uid://b2nj6m0dl0ojm" path="res://scenes/EndlessMode/BackgroundLayer2.svg" id="4_58j1q"]
[ext_resource type="Texture2D" uid="uid://bfgahbxkqkgh1" path="res://scenes/EndlessMode/BackgroundLayer3.svg" id="5_85gpa"]
[ext_resource type="PackedScene" uid="uid://bu02sl87p75td" path="res://player/Player.tscn" id="6_xvv4j"]

[node name="Main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_hvy67")

[node name="Background" type="Node2D" parent="."]
position = Vector2(960, 540)
metadata/speed = 500.0
metadata/background_repeat_threshold = 540.0

[node name="BackgroundLayer1" type="Sprite2D" parent="Background"]
texture_repeat = 2
position = Vector2(-3, 0)
texture = ExtResource("2_8iw2e")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 3240)
script = ExtResource("3_3vcui")

[node name="BackgroundLayer2" type="Sprite2D" parent="Background"]
texture_repeat = 2
texture = ExtResource("4_58j1q")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 3240)
script = ExtResource("3_3vcui")
paralax_speed_multiplier = 1.3

[node name="BackgroundLayer3" type="Sprite2D" parent="Background"]
texture_repeat = 2
texture = ExtResource("5_85gpa")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 3240)
script = ExtResource("3_3vcui")
paralax_speed_multiplier = 3.0

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(960, 900)

[node name="StartDelay" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="NewWaveCountdown" type="Timer" parent="."]
wait_time = 20.0

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(960, 540)

[node name="Player" parent="." instance=ExtResource("6_xvv4j")]

[connection signal="timeout" from="StartDelay" to="." method="_on_start_delay_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="NewWaveCountdown" to="." method="_on_new_wave_countdown_timeout"]
